fix(client): add overflow: hidden; for mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -106,6 +106,7 @@ input[type="file"] {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 ::file-selector-button,
